Name:           LTG
Version:        0.1
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Alexander Morozov
Synopsis:       ICFP2011 contest solution
Build-Type:     Simple

Executable ltg-emulator
  Main-Is:        Emulator.hs
  Other-Modules:  LTG
  Build-Depends:  base, mtl, array, process, haskell98
  Extensions:     DoAndIfThenElse

Executable ltg-bot
  Main-Is:        Bot.hs
  Other-Modules:  LTG
  Build-Depends:  base, mtl, array, process, haskell98
  Extensions:     DoAndIfThenElse

